@@ -60,11 +60,15 @@ static inline gint cell_idx(GtkMineField *mfield, guint x, guint y)
 
 static void _setup_sign (sign *signp, char **data)
 {
-        signp->image = gdk_imlib_create_image_from_xpm_data(data);
-        gdk_imlib_render (signp->image, 5 * (minesize - 4) / 8, 
-			                5 * (minesize - 4) / 8);
-        signp->pixmap = gdk_imlib_move_image (signp->image);
-        signp->mask = gdk_imlib_move_mask (signp->image);
+	GdkImlibImage *image;
+
+        image = gdk_imlib_create_image_from_xpm_data(data);
+        gdk_imlib_render (image,
+			  5 * (minesize - 4) / 8, 
+			  5 * (minesize - 4) / 8);
+        signp->pixmap = gdk_imlib_move_image (image);
+        signp->mask = gdk_imlib_move_mask (image);
+	gdk_imlib_destroy_image (image);
         gdk_window_get_size(signp->pixmap, &(signp->width), &(signp->height));
 }
 
