@@ -32,7 +32,6 @@ typedef struct _Sign sign;
   
 struct _Sign
     {
-	GdkImlibImage *image;
 	GdkPixmap *pixmap;
 	GdkBitmap *mask;
       
